Refactor `LocalRepositoryManager`, and remove singleton